--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   flutter_bloc: ^9.1.1
+  get: ^4.7.2
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
